--- a/src/components/Modal/_modal.scss
+++ b/src/components/Modal/_modal.scss
@@ -73,7 +73,7 @@
       max-width: 75%;
 
       .#{$prefix}--modal--wide & {
-        max-width: 80%;
+        max-width: 90%;
       }
 
       max-height: 90%;
